[712] Fixes alignment issue on search buttons

--- a/src/styles/01-atoms/buttons/_buttons.scss
+++ b/src/styles/01-atoms/buttons/_buttons.scss
@@ -9,6 +9,7 @@
   text-align: center;
 
   &--icon {
+    align-items: center;
     display: inline-flex;
   }
 
